Check if query clause matches filter